bin_PROGRAMS = ckylark

ckylark_SOURCES = \
    ArgumentParser.cc \
    ArgumentParser.h \
    Dictionary.cc \
    Dictionary.h \
    Formatter.cc \
    Formatter.h \
    Grammar.cc \
    Grammar.h \
    LAPCFGParser.cc \
    LAPCFGParser.h \
    Lattice.cc \
    Lattice.h \
    LatticeLoader.h \
    Lexicon.cc \
    Lexicon.h \
    Mapping.cc \
    Mapping.h \
    ModelProjector.cc \
    ModelProjector.h \
    ParserResult.h \
    PLFLatticeLoader.cc \
    PLFLatticeLoader.h \
    Rule.h \
    TagSet.cc \
    TagSet.h \
    Timer.cc \
    Timer.h \
    Tracer.cc \
    Tracer.h \
    Tree.h \
    main.cc \
    ;

