bin_PROGRAMS = ckylark

ckylark_SOURCES = \
    ArgumentParser.cc \
    ArgumentParser.h \
    Dictionary.cc \
    Dictionary.h \
    Formatter.cc \
    Formatter.h \
    Grammar.cc \
    Grammar.h \
    LAPCFGParser.cc \
    LAPCFGParser.h \
    Lattice.cc \
    Lattice.h \
    LatticeLoader.h \
    Lexicon.cc \
    Lexicon.h \
    Mapping.cc \
    Mapping.h \
    MaxScalingFactor.h \
    MaxScalingFactor.cc \
    ModelProjector.cc \
    ModelProjector.h \
    Parser.h \
    ParserResult.h \
    PLFLatticeLoader.cc \
    PLFLatticeLoader.h \
    Rule.h \
    ScalingFactor.h \
    TagSet.cc \
    TagSet.h \
    Timer.cc \
    Timer.h \
    Tracer.cc \
    Tracer.h \
    Tree.h \
    main.cc \
    ;

