bin_PROGRAMS = ckylark

ckylark_SOURCES = \
    ArgumentParser.cc \
    ArgumentParser.h \
    BerkeleySignatureEstimator.cc \
    BerkeleySignatureEstimator.h \
    CharUtil.h \
    Dictionary.cc \
    Dictionary.h \
    Formatter.cc \
    Formatter.h \
    Grammar.cc \
    Grammar.h \
    GZipStream.cc \
    GZipStream.h \
    LAPCFGParser.cc \
    LAPCFGParser.h \
    Lattice.cc \
    Lattice.h \
    LatticeLoader.h \
    Lexicon.cc \
    Lexicon.h \
    LexiconSmoother.h \
    Mapping.cc \
    Mapping.h \
    MaxScalingFactor.cc \
    MaxScalingFactor.h \
    ModelProjector.cc \
    ModelProjector.h \
    OOVLexiconSmoother.cc \
    OOVLexiconSmoother.h \
    Parser.h \
    ParserFactory.cc \
    ParserFactory.h \
    ParserResult.h \
    PLFLatticeLoader.cc \
    PLFLatticeLoader.h \
    Rule.h \
    ScalingFactor.h \
    SignatureEstimator.h \
    Stream.h \
    StreamFactory.cc \
    StreamFactory.h \
    StringUtil.h \
    TagSet.cc \
    TagSet.h \
    TextStream.cc \
    TextStream.h \
    Timer.cc \
    Timer.h \
    Tracer.cc \
    Tracer.h \
    Tree.h \
    main.cc \
    ;

LDADD = -lboost_iostreams

