nobase_include_HEADERS = \
    ckylark/ArgumentParser.h \
    ckylark/BerkeleySignatureEstimator.h \
    ckylark/CKYTable.h \
    ckylark/CharUtil.h \
    ckylark/Dictionary.h \
    ckylark/Formatter.h \
    ckylark/FormatterFactory.h \
    ckylark/Grammar.h \
    ckylark/GZipStream.h \
    ckylark/LAPCFGParser.h \
    ckylark/Lattice.h \
    ckylark/LatticeLoader.h \
    ckylark/Lexicon.h \
    ckylark/LexiconSmoother.h \
    ckylark/Mapping.h \
    ckylark/MaxScalingFactor.h \
    ckylark/ModelProjector.h \
    ckylark/OOVLexiconSmoother.h \
    ckylark/Parser.h \
    ckylark/ParserFactory.h \
    ckylark/ParserResult.h \
    ckylark/ParserSetting.h \
    ckylark/PLFLatticeLoader.h \
    ckylark/POSTagFormatter.h \
    ckylark/Rule.h \
    ckylark/ScalingFactor.h \
    ckylark/SExprFormatter.h \
    ckylark/SignatureEstimator.h \
    ckylark/StdStream.h \
    ckylark/Stream.h \
    ckylark/StreamFactory.h \
    ckylark/StringUtil.h \
    ckylark/TagSet.h \
    ckylark/TextStream.h \
    ckylark/Timer.h \
    ckylark/Tracer.h \
    ckylark/Tree.h
